--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <link rel="stylesheet" href="./Management Folder/management.css">
 </head>
 
-<body onload="alert('現在のバージョンはSCS24.240320αです。');">
+<body onload="alert('スマートフォンを使用する場合は横画面を推奨しています。');">
  <div>
  <p class="title01">春季定例会使用音源</p>
  <p> </p>
