--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
  <p>答えのない問い</p>
  <audio src="./Music Folder/music_04.mp3" controls loop>
  </audio>
+ <p> </p>
+ <p> </p>
+ <p> </p>
+ <p> </p>
+ <p>©︎大東文化大学教育学会運営委員会</p>
  </div>
 </body>
 
